# fastApi_template

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .env  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/db/: base.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/: entities.py  events.py  response.py  tools.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}_back/resources/: reg_ex.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}_back/utils/: error_handlers.py  errors.py  repositories.py  response.py
